# blog

./: .gitignore  pyproject.toml
blogapp/: settings.py  urls.py
blogs/: models.py  urls.py  views.py
blogs/templates/blogs/: greet.html  index.html  layout.html
env/: pyvenv.cfg
static/css/: login-style.css  profile-style.css
tasks/: urls.py  views.py
tasks/templates/tasks/: add_task.html  ask.html  index.html  layout.html
templates/registration/: login.html  profile.html
users/: models.py  urls.py  views.py
users/migrations/: 0001_initial.py
users/templates/registration/: base.html
users/templates/users/: index.html  users.html
